--- a/action.yml
+++ b/action.yml
@@ -13,6 +13,9 @@ inputs:
   heroku_app_name:
     description: "The appname to use for deploying/updating"
     required: true
+  github_token:
+    description: "The access token issued from GitHub to pull from private repositories"
+    required: true
   buildpack:
     description: "An optional buildpack to use when creating the heroku application"
     required: false
